updating readme as `java.ext.dirs` is not a valid option anymore